--- a/templates/publiccategories.html
+++ b/templates/publiccategories.html
@@ -12,7 +12,7 @@
 	<div class="row banner main">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
-			<h1>Restaurants</h1>
+			<h1>Categories</h1>
 		</div>
 	</div>
 
@@ -39,12 +39,12 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	{% for restaurant in restaurants %}
-		<a href = "{{url_for('showMenu', restaurant_id = restaurant.id)}}">
+	{% for category in categories %}
+		<a href = "{{url_for('showCategory', category_id = category.id)}}">
 			<div class="row">
 				<div class="col-md-1"></div>
-					<div class="col-md-10 restaurant-list">
-						<h3>{{restaurant.name}}</h3>
+					<div class="col-md-10 category-list">
+						<h3>{{category.name}}</h3>
 					</div>
 				<div class="col-md-1"></div>
 			</div>
