--- a/static/styles.css
+++ b/static/styles.css
@@ -116,21 +116,21 @@ h3 {
 .banner h1 {
 	margin: 45px 0;
 }
- .restaurant-list {
+ .category-list {
  	background-color: #F0F0F0;
  	padding: 20px;
 u }
- .restaurant-list:hover {
+ .category-list:hover {
  	background-color: #e1e17f;
  	padding: 20px;
 }
-.menu-item {
+.product {
 	background: #F0F0F0;
 	padding: 20px;
 	margin: 20px;
 	margin-left: -20px;
 }
-.menu-price {
+.product-price {
 	font-weight: 700;
 }
 .creator {
