--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@ function signInCallback(authResult) {
         if (result) {
           $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
          setTimeout(function() {
-          window.location.href = "/restaurant";
+          window.location.href = "/category";
          }, 4000);
 
       } else if (authResult['error']) {
