--- a/templates/publiccategory.html
+++ b/templates/publiccategory.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ restaurant.name }}
+			<h1>{{ category.name }}
 			<figure class="creator">
 				<img src="{{ creator.picture}}">
 				<figcaption>{{ creator.name }}</figcaption>
@@ -36,59 +36,22 @@
 			{% endwith %}
 		</div>
 	</div>
-	{% if items !=[] %}
+	{% if products !=[] %}
 		<div class="row">
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
 				<h2>Appetizers</h2>
-					{% for i in items %}
-						{% if i.course == 'Appetizer' %}
-							<div class="menu-item">
+					{% for i in products %}
+							<div class="product">
 								<h3>{{i.name}}</h3>
 								<p>{{i.description}}</p>
-								<p class="menu-price">{{i.price}}</p>
+								<p class="product-price">{{i.price}}</p>
 
 							</div>
-						{% endif %}
 					{% endfor %}
 			</div>
-			<div class="col-md-4">
-				<h2>Entrees</h2>
-					{% for i in items %}
-						{% if i.course == 'Entree' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
 
-						</div>
-						{% endif %}
-					{% endfor %}
-			</div>
-			<div class="col-md-3">
-				<h2>Desserts</h2>
-					{% for i in items %}
-						{% if i.course == 'Dessert' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
-
-						</div>
-						{% endif %}
-					{% endfor %}
-				<h2>Beverages</h2>
-					{% for i in items %}
-						{% if i.course == 'Beverage' %}
-						<div class="menu-item">
-							<h3>{{i.name}}</h3>
-							<p>{{i.description}}</p>
-							<p class="menu-price">{{i.price}}</p>
-
-						</div>
-						{% endif %}
-					{% endfor %}
-			</div>
+			
 			<div class="col-md-1"></div>
 		</div>
 	{% endif %}
