--- a/templates/publiccategory.html
+++ b/templates/publiccategory.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ category.name }}
+			<h1>{{ category.name }} pub
 			<figure class="creator">
 				<img src="{{ creator.picture}}">
 				<figcaption>{{ creator.name }}</figcaption>
@@ -51,7 +51,7 @@
 					{% endfor %}
 			</div>
 
-			
+
 			<div class="col-md-1"></div>
 		</div>
 	{% endif %}
