--- a/templates/categories.html
+++ b/templates/categories.html
@@ -9,12 +9,14 @@
 	<div class="row divider blue">
 		<div class="col-md-12"></div>
 	</div>
-	<div class="row banner main">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<h1>Categories</h1>
-		</div>
-	</div>
+  <div class="row">
+    	<div class="banner main col-md-12">
+        <h2>The Item Catalog!<h2>
+      </div>
+  </div>
+   <div class="col-md-5">
+        <h1>Categories</h1>
+      </div>
 
 <div class = 'flash'>
 		      {% with messages = get_flashed_messages() %}
