--- a/templates/publiccategories.html
+++ b/templates/publiccategories.html
@@ -9,13 +9,14 @@
 	<div class="row divider blue">
 		<div class="col-md-12"></div>
 	</div>
-	<div class="row banner main">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<h1>Categories</h1>
-		</div>
-	</div>
-
+  <div class="row">
+    	<div class="banner main col-md-12">
+        <h2>The Item Catalog!<h2>
+      </div>
+  </div>
+   <div class="col-md-5">
+        <h1>Categories</h1>
+      </div>
 	<div class = 'flash'>
 		      {% with messages = get_flashed_messages() %}
       {% if messages %}
@@ -39,20 +40,28 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
+  <div class="row">
+  <div class="col-md-6">
 	{% for category in categories %}
 		<a href = "{{url_for('showCategory', category_id = category.id)}}">
-			<div class="row">
-				<div class="col-md-1"></div>
-					<div class="col-md-10 category-list">
+					<div class="col-md-6 category-list">
 						<h3>{{category.name}}</h3>
-					</div>
-				<div class="col-md-1"></div>
-			</div>
-		</a>
+          </div>
+			</a>
 	{% endfor %}
+</div>
+
+<div class="col-md-6">
+  <h3> Check out the newest cool items!</h3>
 	{% for p in newProducts %}
-	<p> {{p.name}}</p>
+  <p> <a href="{{url_for('showProduct', category_id = p.category_id, product_id=p.id)}}">{{p.name}} </a>(
+   {% for c in categories %}
+     {% if c.id == p.category_id %}
+       {{c.name}}
+     {% endif %}
+   {% endfor %}
+     )</p>
 	{% endfor %}
-
-
+</div>
+</div>
 {% endblock %}
