--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,16 @@
 <div class="row top-menu">
 	<div class="col-md-6">
 		<a href="{{url_for('showCategories')}}">
-			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show All Categories
+			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+			Show All Categories
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-					<p>Login Link will go Here </p>
-		
+		{% if 'username' not in session %}
+			<a href="{{url_for('showLogin')}}"> Click Here to Log in </a>
+		{% else %}
+			<a href="{{url_for('disconnect')}}">Disconnect</a>
+		{% endif %}
+
 	</div>
 </div>
