--- a/templates/publiccategory.html
+++ b/templates/publiccategory.html
@@ -43,8 +43,9 @@
 				<h2>Appetizers</h2>
 					{% for i in products %}
 							<div class="product">
-								<h3>{{i.name}}</h3>
-								<p>{{i.description}}</p>
+                <a href="{{url_for('showProduct', category_id = i.category_id, product_id=i.id)}}">
+                  <h3>{{i.name}}</h3>
+                </a>
 								<p class="product-price">{{i.price}}</p>
 
 							</div>
