--- a/templates/logout.html
+++ b/templates/logout.html
@@ -2,26 +2,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
-
-<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-
 </head>
 
 <body>
 
-<!-- GOOGLE PLUS SIGN IN BUTTON-->
+  <div id="result">Logout succesful
+    <br><br>
+    Redirecting...
+  </div>
 
-        <div id="result">Logout succesful<br><br>Redirecting... </div>
-<!--END GOOGLE PLUS SIGN IN BUTTON -->
-<script>
-         setTimeout(function() {
-          window.location.href = "/category";
-         }, 4000);
-</script>
+  <script>
+     setTimeout(function() { window.location.href = "/category";}, 4000);
+  </script>
 
+</body>
 
-  </body>
-
-  </html>
+</html>
