--- a/templates/category.html
+++ b/templates/category.html
@@ -1,74 +1,75 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ category.name }}
+<div class="row divider green">
+  <div class="col-md-12"></div>
+</div>
+<div class="row banner menu">
+  <div class="col-md-11 col-md-offset-1 padding-none">
+    <h1>{{ category.name }}
 			<figure class="creator">
 				<img src="{{ creator.picture }}">
 				<figcaption>added by {{creator.name}}</figcaption>
 			</figure>
 			</h1>
 
-		</div>
-	</div>
+  </div>
+</div>
 
-<div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+<div class='flash'>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li> <strong> {{ message }} </strong> </li>
+      {% endfor %}
+    </ul>
+  {% endif %} {% endwith %}
 
 </div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<a href="{{url_for('editCategory', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Category
+<div class="row padding-top padding-bottom">
+  <div class="col-md-1"></div>
+  <div class="col-md-11 padding-none">
+    <a href="{{url_for('editCategory', category_id = category.id )}}">
+      <button class="btn btn-default">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          Edit Category
+			</button>
+    </a>
+    <a href="{{url_for('newProduct', category_id = category.id )}}">
+      <button class="btn btn-default">
+					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+          Add Product
 				</button>
-			</a>
-			<a href="{{url_for('newProduct', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
-					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Product
-				</button>
-			</a>
-						<a href="{{url_for('deleteCategory', category_id = category.id )}}">
-				<button class="btn btn-default delete" id="delete-category">
-					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Category
-				</button>
-			</a>
-		</div>
-		<div class="col-md-7"></div>
-	</div>
+    </a>
+    <a href="{{url_for('deleteCategory', category_id = category.id )}}">
+      <button class="btn btn-default delete">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+          Delete Category
+			</button>
+    </a>
+  </div>
+  <div class="col-md-7"></div>
+</div>
 
-	{% if products !=[] %}
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-				<h2>Appetizers</h2>
-					{% for i in products %}
-							<div class="product">
-								<a href="{{url_for('showProduct', category_id = i.category_id, product_id=i.id)}}">
-                  <h3>{{i.name}}</h3>
-                </a>
-								<p class="product-price">{{i.price}}</p>
-								<a href="{{url_for('editProduct', category_id = category.id, product_id=i.id ) }}">Edit</a> |
-								<a href="{{url_for('deleteProduct', category_id = category.id, product_id=i.id ) }}">Delete</a>
-							</div>
-					{% endfor %}
-			</div>
+{% if products !=[] %}
+<div class="row">
+  <div class="col-md-1"></div>
+  <div class="col-md-3">
+    <h2>Products</h2>
 
-			<div class="col-md-1"></div>
-		</div>
-	{% endif %}
+    <div class="row">
+      {% for i in products %}
+      <a href="{{url_for('showProduct', category_id = i.category_id, product_id=i.id)}}" class="product">
+               {{i.name}}
+              <p class="product-price">{{i.price}}</p>
+             </a>
+      <a href="{{url_for('editProduct', category_id = category.id, product_id=i.id ) }}">Edit</a> |
+      <a href="{{url_for('deleteProduct', category_id = category.id, product_id=i.id ) }}">Delete</a>
+      <br><br> {% endfor %}
+    </div>
+  </div>
+  <div class="col-md-1"></div>
+</div>
+{% endif %}
 {% endblock %}
