--- a/templates/product.html
+++ b/templates/product.html
@@ -1,70 +1,67 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ category.name }}
+<div class="row divider green">
+  <div class="col-md-12"></div>
+</div>
+<div class="row banner menu">
+  <div class="col-md-11 col-md-offset-1 padding-none">
+    <h1>{{ category.name }}
 			<figure class="creator">
 				<img src="{{ url_for('static', filename='blank_user.gif') }}">
 				<figcaption>Category creator's name goes here</figcaption>
 			</figure>
 			</h1>
+  </div>
+</div>
 
-		</div>
-	</div>
+<div class='flash'>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
 
-<div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+  <ul>
+    {% for message in messages %}
+    <li> <strong> {{ message }} </strong> </li>
+    {% endfor %}
+  </ul>
+  {% endif %} {% endwith %}
 
 </div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<a href="{{url_for('editCategory', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
+<div class="row padding-top padding-bottom">
+  <div class="col-md-1"></div>
+  <div class="col-md-11 padding-none">
+    <a href="{{url_for('editCategory', category_id = category.id )}}">
+      <button class="btn btn-default">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Category
 				</button>
-			</a>
-			<a href="{{url_for('newProduct', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
+    </a>
+    <a href="{{url_for('newProduct', category_id = category.id )}}">
+      <button class="btn btn-default">
 					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Product
 				</button>
-			</a>
-						<a href="{{url_for('deleteCategory', category_id = category.id )}}">
-				<button class="btn btn-default delete" id="delete-category">
+    </a>
+    <a href="{{url_for('deleteCategory', category_id = category.id )}}">
+      <button class="btn btn-default delete">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Category
 				</button>
-			</a>
-		</div>
-		<div class="col-md-7"></div>
-	</div>
+    </a>
+  </div>
+  <div class="col-md-7"></div>
+</div>
 
 
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-							<div class="product">
-								<h3>{{product.name}}</h3>
-								<p>{{product.description}}</p>
-								<p class="product-price">{{product.price}}</p>
-								<a href="{{url_for('editProduct', category_id = category.id, product_id=product.id ) }}">Edit</a> |
-								<a href="{{url_for('deleteProduct', category_id = category.id, product_id=product.id ) }}">Delete</a>
-							</div>
-			</div>
+<div class="row">
+  <div class="col-md-1"></div>
+  <div class="col-md-3">
+    <h3>{{product.name}}</h3>
+    <p>{{product.description}}</p>
+    <p class="product-price">{{product.price}}</p>
+    <a href="{{url_for('editProduct', category_id = category.id, product_id=product.id ) }}">Edit</a> |
+    <a href="{{url_for('deleteProduct', category_id = category.id, product_id=product.id ) }}">Delete</a>
 
-			<div class="col-md-1"></div>
-		</div>
+  </div>
+
+  <div class="col-md-1"></div>
+</div>
 
 {% endblock %}
