--- a/templates/publiccategory.html
+++ b/templates/publiccategory.html
@@ -2,58 +2,46 @@
 {% block content %}
 {% include "header.html" %}
 
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ category.name }} pub
+<div class="row divider green">
+  <div class="col-md-12"></div>
+</div>
+<div class="row banner menu">
+  <div class="col-md-11 col-md-offset-1 padding-none">
+    <h1>{{ category.name }}
 			<figure class="creator">
 				<img src="{{ creator.picture}}">
 				<figcaption>{{ creator.name }}</figcaption>
 			</figure>
 			</h1>
 
-		</div>
-	</div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
+  </div>
+</div>
+<div class="row padding-top padding-bottom">
+  <div class="col-md-1"></div>
+  <div class="col-md-11 padding-none">
 
-		</div>
-		<div class="col-md-7"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			{% with messages = get_flashed_messages() %}
-				{% if messages %}
-					<ul>
-						{% for message in messages %}
-							 <li> <strong> {{ message }} </strong> </li>
-						{% endfor %}
-					</ul>
-				{% endif %}
-			{% endwith %}
-		</div>
-	</div>
-	{% if products !=[] %}
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-				<h2>Appetizers</h2>
-					{% for i in products %}
-							<div class="product">
-                <a href="{{url_for('showProduct', category_id = i.category_id, product_id=i.id)}}">
-                  <h3>{{i.name}}</h3>
-                </a>
-								<p class="product-price">{{i.price}}</p>
+  </div>
+  <div class="col-md-7"></div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li> <strong> {{ message }} </strong> </li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+  </div>
+</div>
+{% if products !=[] %}
+<h2>Products</h2>
+<div class="row">
+  {% for i in products %}
+  <a href="{{url_for('showProduct', category_id = i.category_id, product_id=i.id)}}" class="product">
+     {{i.name}}
+     <p class="product-price">{{i.price}}</p>
+   </a> {% endfor %}
+</div>
 
-							</div>
-					{% endfor %}
-			</div>
-
-
-			<div class="col-md-1"></div>
-		</div>
-	{% endif %}
-{% endblock %}
+{% endif %} {% endblock %}
