--- a/templates/publicproduct.html
+++ b/templates/publicproduct.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
+
 	<div class="row divider green">
 		<div class="col-md-12"></div>
 	</div>
@@ -8,8 +9,8 @@
 		<div class="col-md-11 col-md-offset-1 padding-none">
 			<h1>{{ category.name }}
 			<figure class="creator">
-				<img src="{{ url_for('static', filename='blank_user.gif') }}">
-				<figcaption>Category creator's name goes here</figcaption>
+				<img src="{{creator.picture}}">
+				<figcaption>{{creator.name}}</figcaption>
 			</figure>
 			</h1>
 
@@ -17,7 +18,7 @@
 	</div>
 
 <div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages() %}
       {% if messages %}
 
         <ul>
@@ -33,17 +34,17 @@
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
 			<a href="{{url_for('editCategory', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
+				<button class="btn btn-default">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Category
 				</button>
 			</a>
 			<a href="{{url_for('newProduct', category_id = category.id )}}">
-				<button class="btn btn-default" id="new-product">
+				<button class="btn btn-default">
 					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Product
 				</button>
 			</a>
 						<a href="{{url_for('deleteCategory', category_id = category.id )}}">
-				<button class="btn btn-default delete" id="delete-category">
+				<button class="btn btn-default delete">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Category
 				</button>
 			</a>
@@ -55,12 +56,10 @@
 		<div class="row">
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
-							<div class="product">
-								<h3>{{product.name}}</h3>
-								<p>{{product.description}}</p>
-								<p class="product-price">{{product.price}}</p>
+				<h3>{{product.name}}</h3>
+				<p>{{product.description}}</p>
+				<p class="product-price">{{product.price}}</p>
 
-							</div>
 			</div>
 
 			<div class="col-md-1"></div>
