--- a/templates/product.html
+++ b/templates/product.html
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<div class='flash'>
+<div class="flash">
   {% with messages = get_flashed_messages() %}
   {% if messages %}
 
