--- a/templates/publiccategories.html
+++ b/templates/publiccategories.html
@@ -11,7 +11,7 @@
    <div class="col-md-5">
         <h1>Categories</h1>
       </div>
-	<div class = 'flash'>
+	<div class = "flash">
 		{% with messages = get_flashed_messages() %}
       {% if messages %}
 
