--- a/templates/categories.html
+++ b/templates/categories.html
@@ -7,14 +7,14 @@
 </div>
 <div class="row">
   <div class="banner main col-md-12">
-    <h2>The Item Catalog!<h2>
-      </div>
+    <h2>The Item Catalog!</h2>
+  </div>
   </div>
    <div class="col-md-5">
         <h1>Categories</h1>
       </div>
 
-<div class = 'flash'>
+<div class = "flash">
 	 {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
