--- a/templates/category.html
+++ b/templates/category.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class='flash'>
+<div class="flash">
   {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul>
