--- a/templates/editproduct.html
+++ b/templates/editproduct.html
@@ -24,15 +24,16 @@
 						<div class="input-group-addon">$</div>
 						<input type ="text" maxlength="10" class="form-control" name="price" value="{{product.price}}">
 					</div>
-					
-					<button type="submit" class="btn btn-default" id="submit" type="submit">
+
+					<button type="submit" class="btn btn-default" id="submit">
 					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
-					<a href = '{{url_for('showCategories')}}'>
-						<button class="btn btn-default delete">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-					</a>
+
 				</div>
 			</form>
+      <a href = "{{url_for('showCategories')}}">
+        <button class="btn btn-default delete">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+      </a>
 		</div>
 	</div>
 {% endblock %}
