--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,9 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
+  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
-<script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
-
+  <title>Login Page</title>
 </head>
 
 <body>
