--- a/templates/newproduct.html
+++ b/templates/newproduct.html
@@ -25,7 +25,7 @@
           <input type="text" class="form-control" maxlength="10" name="price" placeholder="Price in $">
         </div>
 
-        <button type="submit" class="btn btn-default" id="submit" type="submit">
+        <button type="submit" class="btn btn-default" id="submit">
 					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
       </div>
     </form>
