--- a/templates/publicproduct.html
+++ b/templates/publicproduct.html
@@ -17,7 +17,7 @@
 		</div>
 	</div>
 
-<div class = 'flash'>
+<div class = "flash">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
 
